--- a/pratica_handlerbars/views/viewuser.handlebars
+++ b/pratica_handlerbars/views/viewuser.handlebars
@@ -1,4 +1,4 @@
-<h2>O usuário {{user.name}} tem {{user.age}} anos de idade!</h2>
+<h2>O usuário {{user.name}} com o email {{user.email}} tem {{user.age}} anos de idade!</h2>
 
 <a href="/">Home</a>
 <a href="/users/add">Novo Usuário</a>
