--- a/pratica_handlerbars/views/userform.handlebars
+++ b/pratica_handlerbars/views/userform.handlebars
@@ -1,18 +1,32 @@
-<div class="container-fluid col-6">
-<form action="/users/save" method="post">
+<div class="container">
+    <form action="/users/save" method="post">
 
-<div class="form-group col-5 ">
-<label for="nome">Nome:</label>
-<input type="text" class="form-control" name="name" id="nome" placeholder="Digite seu nome...">
+    <div class="row">
+
+        <div class="col-4">
+
+            <label>Nome:</label>
+            <input type="text" class="form-control" name="name" id="nome">
+    </div>
+    <div class="col-2">
+        <label>Data Nasc: </label>
+        <input type="date" class="form-control" name="dataNasc" id="dataNasc">
+    </div>
 </div>
-<div class="form-group col-3">
-<label for="idade">Idade:</label>
-<input type="text" class="form-control" name="age" id="idade" placeholder="Digite sua idade...">
+<div class="row">
+    <div class="col-5">
+        <label>E-mail</label>
+        <input type="email" class="form-control" name="email">
+    </div>
 </div>
-<div class="form-group col-7">
-<label for="email">E-mail:</label>
-<input type="text" class="form-control" name="email" id="email" placeholder="Digite seu email...">
+<div class="col-2">
+    <label for="">Funcionário</label>
+    <select class="form-control" name="func">
+        <option value="sim">Sim</option>
+        <option value="nao">Não</option>
+    </select>
 </div>
+<br>
 <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
 </div>
